# Pac-Man

./: README.md  config.json  pac-man.py  pac_man.py  pyproject.toml  requeriments.txt
src/engine/: controls.py  dataprocess.py  direction.py  loop_end.py  loop_game.py  loop_highscore.py  loop_instructions.py  loop_menu.py  menu.py  scene.py
src/engine/loop/: loop_game.py  loop_highscore.py  loop_instructions.py  loop_menu.py
src/entities/: entitie.py  entitiesmannager.py  items.py  player.py
src/entities/ghost_model/: blinky.py  clyde.py  ghost.py  ghostmannager.py  inky.py  pinky.py
src/highscores/: highscores.json
src/map/mazegenerator-00001-py3-none-any/: pyproject.toml
src/map/mazegenerator-00001-py3-none-any/mazegenerator/: mazegenerator.py
src/map/mazegenerator-00001-py3-none-any/mazegenerator.egg-info/: PKG-INFO  SOURCES.txt
src/parse/: models.py  read_config.py
